--- a/package.json
+++ b/package.json
@@ -16,15 +16,24 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
-    "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "lodash": "^4.17.21",
+    "lodash.throttle": "^4.1.1",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-horizontal-scrolling-menu": "^4.0.4",
     "react-redux": "^8.0.5",
+    "react-tooltip": "^5.13.1",
     "tailwindcss": "3.3.2",
     "timeago-react": "^3.0.6",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "8.41.0",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
