--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-tuby": "^0.1.24",
     "react-visibility-sensor": "^5.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
