--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
+    "next-pwa": "^5.6.0",
     "node-vibrant": "3.2.1-alpha.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -29,6 +30,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/next-pwa": "^5.6.4",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "8.41.0",
