--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^8.5.1",
     "@react-hooks-library/core": "^0.5.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.2.3",
