--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "chance": "^1.1.11",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
     "node-vibrant": "3.2.1-alpha.1",
@@ -30,6 +31,7 @@
     "use-debounced-search": "^1.0.8"
   },
   "devDependencies": {
+    "@types/chance": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "8.41.0",
